fix z-index issue

--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -58,7 +58,7 @@ body {
     position: fixed;
     transform: translateX(-1000px);
     transition: 0.5s;
-
+    z-index: 10;
     @include medium {
       flex-direction: row;
       transform: translateX(0);
@@ -125,7 +125,7 @@ body {
   top: 2rem;
   position: fixed;
   cursor: pointer;
-  z-index: 1;
+  z-index: 10;
   @include medium {
     display: none;
   }
@@ -172,6 +172,7 @@ body {
   padding: 1rem 0;
   color: $black;
   position: relative;
+  width: 100%;
   &__robot {
     display: flex;
     justify-content: center;
@@ -195,6 +196,10 @@ body {
       text-align: center;
       transition: 0.5s;
       font-size: 26px;
+      @include medium {
+        font-size: 36px;
+        top: -20%;
+      }
       @include large {
         transform: translate(-50%, -100%);
         z-index: -1;
